
add_executable(INF112_ProjetoFinal jogo.cpp ExceptionRPG.cpp inimigo/EquipeInimiga.cpp inimigo/Inimigo.cpp inimigo/Skull.cpp inimigo/Slime.cpp inimigo/Troll.cpp inimigo/Witcher.cpp personagem/Equipe.cpp personagem/Personagem.cpp 
	personagem/Arqueiro.cpp personagem/Barbaro.cpp personagem/Bardo.cpp personagem/Guerreiro.cpp personagem/Ladino.cpp personagem/Mago.cpp personagem/Paladino.cpp personagem/Sacerdote.cpp main.cpp)
